<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversionActivity">

    <TextView
        android:id="@+id/beskrivelse"
        android:layout_width="254dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:text="@string/description"
        android:fontFamily="@font/futurafont"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@+id/numberInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <EditText
        android:id="@+id/numberInput"
        android:layout_width="278dp"
        android:layout_height="71dp"
        android:layout_marginBottom="24dp"
        android:hint="0"
        android:inputType="numberDecimal"
        android:maxLength="12"
        android:paddingLeft="5dp"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toTopOf="@+id/currencyFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:layout_marginBottom="36dp"
        android:background="@color/colorPrimaryDark"
        android:text="Convert"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <Spinner
        android:id="@+id/currencyFrom"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toTopOf="@+id/currencyTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:entries="@array/currency_arrays"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/fromText"
        android:layout_width="51dp"
        android:layout_height="26dp"
        android:layout_marginStart="76dp"
        android:text="From"
        android:textColor="@color/colorLightGray"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toBottomOf="@+id/currencyFrom"
        app:layout_constraintEnd_toStartOf="@+id/currencyFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currencyFrom"
        app:layout_constraintVertical_bias="0.466" />


    <Spinner
        android:id="@+id/currencyTo"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:entries="@array/currency_arrays"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/toText"
        android:layout_width="51dp"
        android:layout_height="26dp"
        android:layout_marginStart="76dp"
        android:text="To"
        android:textColor="@color/colorLightGray"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toBottomOf="@+id/currencyTo"
        app:layout_constraintEnd_toStartOf="@+id/currencyFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currencyTo"
        app:layout_constraintVertical_bias="0.466" />

    <EditText
        android:id="@+id/results"
        android:layout_width="307dp"
        android:layout_height="76dp"
        android:layout_marginBottom="60dp"
        android:editable="false"
        android:inputType="none"
        android:paddingLeft="5dp"
        android:textAlignment="center"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="4dp"
        android:text="Result:"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/futurafont"
        app:layout_constraintBottom_toTopOf="@+id/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>